infra/k8s/overlays/local/local-expiration-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration
spec:
  template:
    spec:
      containers:
        - name: expiration
          readinessProbe: null
          livenessProbe: null
