infra/k8s/overlays/local/local-imagepullsecrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  template:
    spec:
      imagePullSecrets: []
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  template:
    spec:
      imagePullSecrets: []
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration
spec:
  template:
    spec:
      imagePullSecrets: []
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
spec:
  template:
    spec:
      imagePullSecrets: []
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
spec:
  template:
    spec:
      imagePullSecrets: []
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
spec:
  template:
    spec:
      imagePullSecrets: []
