infra/k8s/overlays/local/local-pullpolicy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  template:
    spec:
      containers:
        - name: auth
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  template:
    spec:
      containers:
        - name: client
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration
spec:
  template:
    spec:
      containers:
        - name: expiration
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
spec:
  template:
    spec:
      containers:
        - name: orders
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
spec:
  template:
    spec:
      containers:
        - name: payments
          imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
spec:
  template:
    spec:
      containers:
        - name: tickets
          imagePullPolicy: Never
